--- a/css/style.css
+++ b/css/style.css
@@ -412,54 +412,6 @@ section#slide-nosotros {
 
 /*CONTACTO PAGE*/
 
-section#slide-contacto {
-    grid-area: slide;
-    background-image: url("../img/slide_contacto.png");
-    background-size: cover;
-    background-position: center;
-    height: 400px;
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.container_text_block_page_contacto {
-    padding-top: 60px;
-    padding-bottom: 60px;
-    background-color: #ffffff;
-}
-
-.text_block_contacto {
-    font-family: "Roboto";
-    font-size: 15px;
-    color: #2B4A86;
-    text-align: center;
-    padding-left: 15%;
-    padding-right: 15%;
-}
-
-.section_contacto {
-    display: flex;
-    justify-content: center;
-    width: 100%;
-    font-family: "Roboto";
-    padding: 5% 0%;
-}
-
-.title_contacto {
-    font-size: 20px;
-    color: #2B4A86;
-    text-align: left;
-    margin: 0;
-}
-
-.text_contacto {
-    font-size: 15px;
-    color: #7c95c5;
-    text-align: left;
-}
-
 .text_form {
     font-size: 15px;
     color: #7C95C5;
@@ -500,11 +452,7 @@ input[type=submit] {
     width: 30%;
     height: 30px;
 }
-.btnSend{
-    color: #fff;
-    background-color: #7C95C5;
-    border-color:#7C95C5;
-}
+
 
 /*MEDIA TABLET HOME*/
 
@@ -624,7 +572,7 @@ input[type=submit] {
 /*MEDIA TABLET SKINCARE*/
 
 @media screen and (max-width: 768px) {
-    section#slide-contacto {
+    section#slide-skinecare {
         background-image: url("../img/slide_skincare-tablet.png");
         height: 300px;
     }
@@ -639,43 +587,10 @@ input[type=submit] {
 /*MEDIA MOBILE SKINCARE*/
 
 @media screen and (max-width: 425px) {
-    section#slide-contacto {
+    section#slide-skincare {
         background-image: url("../img/slide_skincare-mobile.png");
     }
     .section_page_skincare {
         margin: 50px;
-    }
-}
-
-/*MEDIA TABLET CONTACT*/
-
-@media screen and (max-width: 768px) {
-    section#slide-contacto {
-        background-image: url("../img/slide_contacto-tablet.png");
-        height: 300px;
-    }
-}
-.section_contacto {
-    padding: 5% 10%;
-}
-/*MEDIA MOBILE CONTACT*/
-
-@media screen and (max-width: 425px) {
-    section#slide-contacto {
-        background-image: url("../img/slide_contacto-mobile.png");
-        height: 200px;
-    }
-    .section_contacto {
-        width: auto;
-        padding: 0 40px;
-    }
-    .text_block_contacto {
-        font-size: 12px;
-    }
-    .title_contacto {
-        font-size: 16px;
-    }
-    h2{
-        font-size: 25px;
     }
 }
