--- a/scss/global.css
+++ b/scss/global.css
@@ -1,17 +1,17 @@
 .icons_footer_twitter {
-  color: grey;
+  color: #7C95C5;
   font-size: 2rem;
   margin-right: 5px;
 }
 
 .icons_footer_facebook {
-  color: blue;
+  color: #5f568b;
   font-size: 2rem;
   margin-right: 5px;
 }
 
 .icons_footer_youtube {
-  color: red;
+  color:#fca89e;
   font-size: 2rem;
   margin-right: 5px;
 }
