--- a/css/style.css
+++ b/css/style.css
@@ -620,9 +620,24 @@ input[type=submit] {
 /*MEDIA TABLET NOSOTROS*/
 
 /*MEDIA MOBILE NOSOTROS*/
+
 @media screen and (max-width: 425px) {
     section#slide-nosotros {
         background-image: url("../img/slide_nosotros-mobile.png");
         height: 200px;
+    }
+    .grid {
+        display: initial;
+    }
+    .title_nosotros {
+        font-size: 16px;
+        margin: 30px;
+    }
+    .section_nosotros {
+        padding: 0%;
+    }
+    .section2_nosotros {
+        flex-direction: column;
+        align-items: center;
     }
 }
